# ticktick-clone

./: .aider.conf.yml  .aider.model.settings.yml  .env.example  .gitignore  CLAUDE.md  MISSING.md  README.md  docker-compose.prod.yml  docker-compose.yml  models.py (I'll assume this is in a project app)  models.py (assuming this is in your app)  views.py (for the folder functionality)
backend/: .dockerignore  Dockerfile  conftest.py  entrypoint.sh  pyproject.toml
backend/apps/accounts/: actors.py  admin.py  authentication.py  fcm.py  models.py  push.py  serializers.py  signals.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_initial.py  0003_usersettings_hidden_hours_end_and_more.py  0004_usersettings_calendar_layout.py  0005_usersettings_daily_review.py  0006_pushsubscription.py  0007_apikey.py  0008_fcmdevice.py
backend/apps/accounts/tests/: test_api_key.py  test_auth.py  test_fcm.py  test_me_and_push.py
backend/apps/calendars/: admin.py  models.py  serializers.py  sync.py  tasks.py  urls.py  views.py
backend/apps/calendars/migrations/: 0001_initial.py  0002_calendarevent.py
backend/apps/calendars/tests/: test_ics.py
backend/apps/countdown/: models.py  serializers.py  urls.py  views.py
backend/apps/countdown/migrations/: 0001_initial.py
backend/apps/focus/: models.py  serializers.py  urls.py  views.py
backend/apps/focus/migrations/: 0001_initial.py  0002_focussession_planned_seconds.py
backend/apps/focus/tests/: test_pomodoro_control.py
backend/apps/habits/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/habits/migrations/: 0001_initial.py  0002_habitreminder_last_sent_on.py
backend/apps/habits/tests/: test_habits.py  test_reminders.py
backend/apps/projects/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/projects/migrations/: 0001_initial.py  0002_add_smart_list_fields.py  (+2 more)
backend/apps/stats/: urls.py  views.py
backend/apps/sync/: consumers.py  routing.py
backend/apps/tags/: models.py  serializers.py  urls.py  views.py
backend/apps/tasks/: admin.py  models.py  serializers.py  tasks.py  ticktick_import.py  urls.py  views.py
backend/apps/webhooks/: admin.py  dispatch.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/config/: __init__.py  asgi.py  celery.py  settings.py  urls.py  views.py
backend/spec/: test_contract_update_tasks.py  test_jalon1_acceptance.py  test_jalon2_organization.py  test_jalon3_calendar_boards.py  test_jalon4_habits_focus_stats.py  test_jalon5_sync_offline_data.py  test_jalon6_android.py  test_jalon7_windows.py  test_jalon8_polish.py  test_ops_health.py  test_scope_cuts.py
(+155 files in other folders)
