[project]
name = "ticktick-backend"
version = "0.1.0"
description = "Backend Django du clone TickTick"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "drf-spectacular>=0.27",
    "django-cors-headers>=4.4",
    "django-filter>=24.3",
    "psycopg[binary]>=3.2",
    "python-dateutil>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
# -ra : affiche le résumé des tests skippés (= la carte des comportements
# encore à implémenter, jalon par jalon).
addopts = "-q -ra"
markers = [
    "spec: comportement d'acceptation issu du PRD (carte de couverture)",
]

[tool.uv]
package = false
