[project]
name = "ticktick-backend"
version = "0.1.0"
description = "Backend Django du clone TickTick"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "drf-spectacular>=0.27",
    "django-cors-headers>=4.4",
    "django-filter>=24.3",
    "psycopg[binary]>=3.2",
    "python-dateutil>=2.9",
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "gunicorn>=23.0",
    "uvicorn[standard]>=0.32",
    "whitenoise>=6.8",
    "celery>=5.4",
    "redis>=4.6,<5",
    "pywebpush>=2.0",
    "google-auth>=2.0",
    "requests>=2.31",
    "icalendar>=6.0",
]

[dependency-groups]
dev = [
    "daphne>=4.2.2",
    "pytest>=8.3",
    "pytest-asyncio>=1.4.0",
    "pytest-django>=4.9",
    "ruff>=0.15.20",
]

[tool.ruff.lint]
# Ruleset minimal (garde-fou, pas de réécriture de style) :
# F = pyflakes, E4/E7/E9 = erreurs pycodestyle (imports/statements/syntaxe), B = bugbear.
select = ["F", "E4", "E7", "E9", "B"]

[tool.ruff.lint.per-file-ignores]
# Baseline (ratchet) : violations préexistantes tolérées telles quelles —
# on ne réécrit pas du code existant pour le linter. Ne pas en ajouter.
"apps/accounts/authentication.py" = ["B904"]
"apps/tasks/tests/test_tasks.py" = ["F841"]
"spec/test_jalon2_organization.py" = ["F841"]
"spec/test_jalon3_calendar_boards.py" = ["F841"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
asyncio_mode = "auto"
# -ra : affiche le résumé des tests skippés (= la carte des comportements
# encore à implémenter, jalon par jalon).
addopts = "-q -ra"
markers = [
    "spec: comportement d'acceptation issu du PRD (carte de couverture)",
]

[tool.uv]
package = false
